--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -47,7 +47,7 @@
 
 \newcommand{\ctrof}[1]{\mathsf{Ctr}[#1]}
 
-\newcommand{\ctxreltypes}{T_R^{\Gamma}}
+\newcommand{\ctxreltypes}{T_R^{X}}
 
 \newcommand{\ctxs}{\mathsf{Ctxs}}
 
@@ -121,6 +121,8 @@
 
 \newcommand{\headof}[1]{\mathsf{Head}_{#1}}
 
+\newcommand{\idxpos}[1]{P_{#1}}
+
 \newcommand{\immsubders}[1]{\mathsf{ImmSubs}[ #1 ]}
 
 \newcommand{\injl}{\cc{injl}}
@@ -153,6 +155,8 @@
 
 \newcommand{\letexp}[4]{\cc{let(} #1 \cc{,} #2 \cc{)=} #3 \cc{ in } #4}
 
+\newcommand{\lfpvars}{X_L}
+
 \newcommand{\matchexp}[5]{\cc{match } #1 \cc{ with } #2 \cc{->} #3 \cc{|} #4 \cc{->} #5}
 
 \newcommand{\nilrel}{\mathsf{NilRel}}
@@ -183,7 +187,7 @@
 
 \newcommand{\posexps}{\mathsf{Exps}}
 
-\newcommand{\posreltypes}{T_R^P}
+\newcommand{\posreltypes}{T_R^{X \union \exppos}}
 
 \newcommand{\prevrule}[1]{\mathsf{Prev}[ #1 ]}
 
@@ -265,13 +269,13 @@
 
 \newcommand{\tydatafield}{D}
 
-\newcommand{\tyleftprod}{\mathsf{l}_{\times}}
+\newcommand{\tyleftprod}{\cdot \times}
 
-\newcommand{\tyleftsum}{\mathsf{l}_{+}}
+\newcommand{\tyleftsum}{\cdot +}
 
 \newcommand{\tylfp}{\mu}
 
-\newcommand{\typaramfield}{\to_{\alpha}}
+\newcommand{\typaramfield}{\cdot \to}
 
 \newcommand{\typarampos}{\alpha}
 
@@ -279,13 +283,17 @@
 
 \newcommand{\typosfields}{F_T}
 
+\newcommand{\typos}{P_T}
+
+\newcommand{\openpos}[1]{O_T^{#1}}
+
 \newcommand{\types}{\mathsf{Types}}
 
-\newcommand{\tyresfield}{\to_{\nu}}
+\newcommand{\tyresfield}{\to \cdot}
 
-\newcommand{\tyrightprod}{\mathsf{r}_{\times}}
+\newcommand{\tyrightprod}{\times \cdot}
 
-\newcommand{\tyrightsum}{\mathsf{r}_{+}}
+\newcommand{\tyrightsum}{+ \cdot}
 
 \newcommand{\tyvarfield}{X}
 
